<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/myFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/logoTextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/layout_bg"
        android:clickable="false"
        android:fontFamily="sans-serif-black"
        android:paddingLeft="30dp"
        android:paddingTop="20dp"
        android:paddingRight="30dp"
        android:paddingBottom="20dp"
        android:text="@string/matrain_text"
        android:textColor="@color/colorBackground"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogoText" />


    <LinearLayout
        android:id="@+id/menuItems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/logoTextMain">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/new_game_text"
            android:drawableLeft="@drawable/ic1_new_game"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/leaderBoardButton"
            android:layout_width="250dp"
            android:drawableLeft="@drawable/ic1_r"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/rankings_text"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/about_logo_text"
            android:textColor="@color/colorWhiteBackground"
            android:drawableLeft="@drawable/ic1_a"
            android:textSize="20sp" />

        <Button
            android:id="@+id/exitButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:text="@string/exit_text"
            android:textColor="@color/colorWhiteBackground"
            android:drawableStart="@drawable/ic1_e"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/usernameLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@drawable/bg_edit_name"
        android:fontFamily="sans-serif-black"
        android:padding="8dp"
        android:text="@string/username_text"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>