<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".GameActivity">

    <SeekBar
        android:id="@+id/timerSeekBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:max="300"
        android:progress="300"
        android:progressDrawable="@drawable/custom_seekbar"
        android:thumb="@drawable/custom_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreTextview" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="16dp"

        android:background="@drawable/layout_bg"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerSeekBar">

        <TextView
            android:id="@+id/firstNumber"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorBackground"
            android:textSize="54sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/operatorSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/plus_sign_text"
            android:textColor="@color/colorBackground"
            android:textSize="54sp"
            app:layout_constraintStart_toEndOf="@+id/firstNumber"
            app:layout_constraintTop_toTopOf="@+id/secondNumber" />

        <TextView
            android:id="@+id/secondNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorBackground"
            android:textSize="54sp"
            app:layout_constraintStart_toEndOf="@+id/operatorSign"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/equaltSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/equal_sign_text"
            android:textColor="@color/colorBackground"
            android:textSize="54sp"
            app:layout_constraintStart_toEndOf="@+id/secondNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:maxLines="1"
            android:textColor="@color/colorBackground"
            android:textSize="54sp"
            app:layout_constraintStart_toEndOf="@+id/equaltSign"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/modeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Mode: Easy"
        android:background="@drawable/layout_bg"
        android:fontFamily="sans-serif-black"
        android:paddingHorizontal="10dp"
        android:paddingVertical="10dp"
        android:textColor="@color/colorBackground"
        android:textSize="20sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/scoreTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/zero_num_text"

        android:textSize="20sp"
        android:background="@drawable/layout_bg"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toStartOf="@+id/pauseBtn"
        app:layout_constraintStart_toEndOf="@+id/modeTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pauseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pause_sign_text"

        android:textSize="20sp"
        android:background="@drawable/layout_bg"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:textColor="@color/colorBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/layout_bg"
        android:padding="10dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/oneNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/one_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/twoNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/two_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/threeNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/three_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fourNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/four_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/fiveNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/five_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/sixNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/six_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/sevenNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/seven_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/eightNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/eight_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/nineNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/nine_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/delBtn"
                android:layout_width="40dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/del_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/zeroNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/zero_num_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />

            <Button
                android:id="@+id/minusSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:onClick="numPressed"
                android:padding="8dp"
                android:text="@string/minus_sign_text"
                android:textColor="@color/colorWhiteBackground"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>