<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".AboutActivity">

    <LinearLayout
        android:id="@+id/levelsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/instructionsBtn"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:onClick="callFragment"
            android:drawableStart="@drawable/ic1_inst"
            android:text="@string/instructions_text"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/aboutRanking"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:onClick="callFragment"
            android:text="@string/ranking_text"
            android:drawableStart="@drawable/ic1_r"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp" />

        <Button
            android:id="@+id/aboutGame"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-black"
            android:onClick="callFragment"
            android:drawableStart="@drawable/ic1_new_game"
            android:text="@string/game_text"
            android:textColor="@color/colorWhiteBackground"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/aboutLogoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/layout_bg"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingTop="10dp"
        android:paddingEnd="30dp"

        android:paddingBottom="10sp"
        android:text="@string/about_logo_text"
        android:textColor="@color/colorBackground"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/levelsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>